[package]
name = "echo-ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.4", features = ["ws", "headers"] }
headers = "0.3.7"
hyper = { version = "0.14.18", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs", "trace"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
